2007-02-14  Oracle Corporation (commited by KUBO Takehiro <kubo@jiubao.org>)
	* lib/oci8.rb.in: add a private method parse_connect_string to support
	    "username/password[@(tns_name|//host[:port]/service_name)][ as (sysdba|sysoper)]".
	* test/test_connstr.rb: add test cases for parse_connect_string.
	* test/test_all.rb: call test cases for parse_connect_string.

2007-01-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: add TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
	    macros to suppress 'differ in signedness' warinings.
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/lob.c,
	  ext/oci8/ocinumber.c, ext/oci8/oranumber.c, ext/oci8/server.c,
	  ext/oci8/stmt.c: use TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
	    macros to suppress 'differ in signedness' warinings.

2007-01-20  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: don't call OCIEnv.create when initializing.
	* release as 1.0.0-rc1.

2007-01-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix bugs on windows created by the previous commit.

2007-01-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: check whether Full Client or Instant Client by checking
	  load library path.

2007-01-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c: raise "OCI Library Initialization Error" message
	    if no message can not be retrieved while OCIEnv.create.
	* ext/oci8/oraconf.rb, ext/oci8/extconf.rb: refactor oraconf.rb.
	* lib/oci8.rb.in: don't raise OCIError on requireing oci8. raise
	    the error when connecting to the Oracle. (for active record)

2006-12-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/handle.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/stmt.c: add OCIFileLocator.
	* ext/oci8/lob.c: fix OCILobLocator#open to accept a second argument.
	    add OCIFileLocator#name, OCIFileLocator#set_name and
	    OCIFileLocator#exists?
	* ext/oci8/svcctx.c: add OCISvcCtx#close_all_files.